--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: swift build -v
+        run: go build
       - name: Run tests
-        run: swift test -Xswiftc -DFULL
+        run: go test
