--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,11 +8,14 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/setup-go@v3
       - uses: actions/checkout@v2
       - name: Build
         run: go build
+      - name: Lint
+        uses: golangci/golangci-lint-action@v3
       - name: Run tests
         run: go test
