--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,14 +8,23 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+          - os: windows-latest
+          - os: macos-latest
 
     steps:
       - uses: actions/setup-go@v3
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
       - name: Build
         run: go build
+
       - name: Lint
         uses: golangci/golangci-lint-action@v3
+
       - name: Run tests
         run: go test
