--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,9 @@ jobs:
 
     steps:
       - uses: actions/setup-go@v4
+        with:
+          go-version: ">=1.20.0"
+
       - uses: actions/checkout@v3
 
       - name: Build
