--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Setup Golang
         uses: actions/setup-go@v4
+        with:
+          go-version: ">=1.20.0"
 
       # https://goreleaser.com/ci/actions/?h=github+act#usage
       - name: Publish via GoReleaser
