--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,8 @@ jobs:
           - os: macos-latest
 
     steps:
-      - uses: actions/setup-go@v4
+      - name: Setup Golang
+        uses: actions/setup-go@v4
         with:
           go-version: ">=1.20.0"
 
